--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width,height=device-height,initial-scale=1.0"/>
-    <title>Basic Example with External JSX</title>
+    <title>Multiplication Practice</title>
     <link rel="stylesheet" href="../shared/css/base.css" />
   </head>
 
