--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width,height=device-height,initial-scale=1.0"/>
-    <title>Basic Example with External JSX</title>
+    <title>Multiplication Practice</title>
     <link rel="stylesheet" href="../shared/css/base.css" />
   </head>
 
@@ -14,6 +14,6 @@
     <script src="react.js"></script>
     <script src="react-dom.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.24/browser.min.js"></script>
-    <script type="text/babel" src="example.js"></script>
+    <script type="text/babel" src="multiplicationPractice.js"></script>
   </body>
 </html>
