added styling to support mobile

--- a/index.html
+++ b/index.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta name="viewport" content="width=device-width,height=device-height,initial-scale=1.0"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Multiplication Practice</title>
+    <link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/skeleton.css">
   </head>
 
   <body>
-    <div id="container">
-
+    <div class="container">
+      <div class="row">
+        <div class="twelve columns" id="multiplicationApp">
+        </div>
+      </div>
     </div>
 
     <script src="react.js"></script>
